add payment and withdrawal features; implement payment initialization, withdrawal request handling, and update related DTOs and mappers